Archive2/05/5db4d58e6c4058/output
main.cpp: In lambda function:
main.cpp:22:17: error: static assertion failed: 'a' is not a function
 int A::a = [](){static_assert(std::is_function<decltype(a)>::value,"'a' is not a function");return 777;}();
                 ^
